--- a/messanger_connect_website.html
+++ b/messanger_connect_website.html
@@ -17,20 +17,13 @@
 [Mariyam Traders ltd.] Page_ID = 102411262060619
 
     <!--MASSANGER START-->
-    <!-- Messenger Chat Plugin Code -->
     <div id="fb-root"></div>
-
-    <!-- Your Chat Plugin code -->
-    <div id="fb-customer-chat" class="fb-customerchat">
-    </div>
-
+    <div id="fb-customer-chat" class="fb-customerchat"></div>
     <script>
       var chatbox = document.getElementById('fb-customer-chat');
       chatbox.setAttribute("page_id", "102962622796682");
       chatbox.setAttribute("attribution", "biz_inbox");
     </script>
-
-    <!-- Your SDK code -->
     <script>
       window.fbAsyncInit = function() {
         FB.init({
@@ -38,7 +31,6 @@
           version          : 'v18.0'
         });
       };
-
       (function(d, s, id) {
         var js, fjs = d.getElementsByTagName(s)[0];
         if (d.getElementById(id)) return;
@@ -49,38 +41,15 @@
     </script>
     <!--MASSANGER END-->
 
-<!-- Messenger Chat Plugin Code -->
-    <div id="fb-root"></div>
-
-    <!-- Your Chat Plugin code -->
-    <div id="fb-customer-chat" class="fb-customerchat">
-    </div>
-
-    <script>
-      var chatbox = document.getElementById('fb-customer-chat');
-      chatbox.setAttribute("page_id", "119414801136558");
-      chatbox.setAttribute("attribution", "biz_inbox");
-    </script>
-
-    <!-- Your SDK code -->
-    <script>
-      window.fbAsyncInit = function() {
-        FB.init({
-          xfbml            : true,
-          version          : 'v18.0'
-        });
-      };
-
-      (function(d, s, id) {
-        var js, fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) return;
-        js = d.createElement(s); js.id = id;
-        js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
-        fjs.parentNode.insertBefore(js, fjs);
-      }(document, 'script', 'facebook-jssdk'));
-    </script>
-
-<!-- facebook -->
+<!-- whatsapp1 -->
+<a href="https://wa.me/+8801632109022" target="_blank" style="position: fixed; left:20px; bottom:20px;">
+    <img src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c543.png" width="50px" height="auto" alt="">
+</a>
+<!-- whatsapp2 -->
+<script>!function(){var e,t,n,a;window.MyAliceWebChat||((t=document.createElement("div")).id="myAliceWebChat",(n=document.createElement("script")).type="text/javascript",n.async=!0,n.src="https://widget.myalice.ai/index.js",(a=(e=document.body.getElementsByTagName("script"))[e.length-1]).parentNode.insertBefore(n,a),a.parentNode.insertBefore(t,a),n.addEventListener("load",(function(){MyAliceWebChat.init({selector:"myAliceWebChat",number:"8801632109022",message:"Hey",color:"#05406F",channel:"wa",boxShadow:"none",text:"Message Us",theme:"light",position:"left",mb:"20px",mx:"20px",radius:"20px"})})))}();</script>
+<!-- whatsapp3 -->
+<script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+<div class="elfsight-app-558bdf87-5981-4ea2-82bc-73450131d34b" data-elfsight-app-lazy></div>
 
         </textarea>
       </div>
