--- a/messanger_connect_website.html
+++ b/messanger_connect_website.html
@@ -15,6 +15,7 @@
 [p2c it] Page_ID = 102962622796682
 [Arman's Solution] Page_ID = 119414801136558
 [Mariyam Traders ltd.] Page_ID = 102411262060619
+[Shikkha 24 Bd] Page_ID = 122116274624001605
 
     <!--MASSANGER START-->
     <div id="fb-root"></div>
