--- a/ckeditor5.html
+++ b/ckeditor5.html
@@ -25,6 +25,17 @@
             console.error( error );
         } );
 </script>
+OR
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        ClassicEditor
+            .create(document.querySelector('#editor'), {
+                ckfinder: { uploadUrl: '{{ route("question.store") }}?_token={{ csrf_token() }}' }
+            })
+            .then(editor => { console.log('Editor was initialized', editor); })
+            .catch(error => { console.error('Error initializing editor', error); });
+    });
+</script>
 Route::post('/testimonial-store2', [TestimonialController::class, 'testimonialStore2'])->name('testimonial.store2');
 public function testimonialStore2(Request $request){
     if($request->hasFile('upload')){
