--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <div class="row">
                 <div class="col-12" style="text-aling: justify;">
 
+                  <a href="./wordpress.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">WordPress</a>
                   <a href="./authentication.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Authentication</a>
                   <a href="./email_verification.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Email Verification</a>
                   <a href="./command.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Command</a>
@@ -91,7 +92,6 @@
                   <a href="./soft_delete.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">soft_delete</a>
                   <a href="./jquery_chosen.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">jquery_chosen</a>
                   <a href="./debugbar.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">debugbar</a>
-                  <a href="./wordpress.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">wordpress</a>
                   <a href="./scroll_top.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">scroll_top</a>
                   <a href="./pc.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">PC Faster</a>
                   <a href="./permission_error.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Permission Error</a>
