--- a/wordpress.html
+++ b/wordpress.html
@@ -79,6 +79,44 @@ soo demo importer
 SoftTech IT 
 bKash WordPress Payment
 
+
+Course outline
+--------------------------
+Introduction to WordPress
+  What is WordPress, Its History, and Why It’s Popular
+  Setting Up a WordPress Website: Domain, Hosting, and Installing WordPress
+  Dashboard Overview: Navigating WordPress Admin Panel
+WordPress Basic
+  Posts vs. Pages: Understanding the Difference and Creating Content
+  Categories and Tags: Organizing Content Effectively
+  Comments: Managing User Engagement
+WordPress Design Fundamentals
+  Choosing and Installing Themes: Free vs. Premium Themes
+  Customizing Themes: Using the WordPress Customizer
+  Widgets and Sidebars: Enhancing Your Website
+WordPress Develeopment Basics
+  Introduction to HTML/CSS
+  Child Themes: Creation and Customization
+  Introduction to Plugins: Installation and Usage
+Advanced WordPress Development
+  Custom Post Types and Taxonomies
+  Template Hierarchy: WordPress Template Selection Process
+  Hooks and Filters for Advanced Customization
+Search Engine Optimizations (SEO)
+  SEO Basics: Keywords, On-Page SEO, and Backlinks
+  SEO Plugins: Optimizing Content with Yoast SEO
+Security and Performance
+  Website Security: Best Practices and Plugins
+  Performance Optimization: Caching, Image Optimization, and CDN Integration
+Launching and maintaining Your Website
+  Launch Checklist: Preparing Your Website for the Public
+  Regular Maintenance: Keeping Themes, Plugins, and Content Updated
+Q&A Sessions and Troubleshooting
+  Live Q&A Sessions: Addressing Student Questions and Issues
+  Troubleshooting: Solving Common WordPress Problems
+Assessment and Certification
+  Final Project: Creating a Complete WordPress Website from Scratch
+  Certification: Assessing Knowledge through Quizzes and Final Project Evaluation
         </textarea>
       </div>
     </div>
