--- a/wordpress.html
+++ b/wordpress.html
@@ -60,6 +60,8 @@ In Directory : Blank
 
 When any UPDATE -> please backup file
 
+*crack kisu use kora jabe na
+
 themes
 -----------------------------
 astra for lms
