--- a/wordpress.html
+++ b/wordpress.html
@@ -62,6 +62,9 @@ When any UPDATE -> please backup file
 
 *crack kisu use kora jabe na
 
+Shortkart Key
+windows+; for emoji
+
 themes
 -----------------------------
 astra for lms
