--- a/wordpress.html
+++ b/wordpress.html
@@ -23,10 +23,6 @@ Wordpress Theme Customiztion / Wordpress Plugin Cusyomization
 localhost/wordpress/wp_ecommerce/
 localhost/wordpress/wp_ecommerce/wp-admin
 localhost/wordpress/wp_ecommerce/wp-login.php
-          
-Plugins
------------------------------------------------------
-Contact Form 7, 
 
 Live Server / Local Server [xampp]
 
@@ -69,9 +65,11 @@ themes
 -----------------------------
 astra for lms
 martfury for ecommerce
+zita for blog
 
 plugin
 -----------------------------
+Contact Form 7
 Elementor Website Builder – More than Just a Page Builder
 Tutor LMS – eLearning and online course solution
 Tutor LMS Elementor Addons
