--- a/wordpress.html
+++ b/wordpress.html
@@ -79,6 +79,8 @@ FluentSMTP – WP Mail SMTP, Amazon SES, SendGrid, MailGun and Any SMTP Connecto
 Contact Form Plugin – Fastest Contact Form Builder Plugin for WordPress by Fluent Forms
 Email Marketing, Newsletter, Email Automation and CRM Plugin for WordPress by FluentCRM
 Starter Templates — Elementor, WordPress & Beaver Builder Templates
+Photo Gallery by 10Web-Mobile-Friendly Image Gallery
+
 
 soo demo importer
 SoftTech IT 
