--- a/wordpress.html
+++ b/wordpress.html
@@ -80,6 +80,7 @@ Contact Form Plugin – Fastest Contact Form Builder Plugin for WordPress by Flu
 Email Marketing, Newsletter, Email Automation and CRM Plugin for WordPress by FluentCRM
 Starter Templates — Elementor, WordPress & Beaver Builder Templates
 Photo Gallery by 10Web-Mobile-Friendly Image Gallery
+Best WordPress Gallery Plugin – FooGallery
 
 
 soo demo importer
