--- a/wordpress.html
+++ b/wordpress.html
@@ -81,6 +81,7 @@ Email Marketing, Newsletter, Email Automation and CRM Plugin for WordPress by Fl
 Starter Templates — Elementor, WordPress & Beaver Builder Templates
 Photo Gallery by 10Web-Mobile-Friendly Image Gallery
 Best WordPress Gallery Plugin – FooGallery
+Real Media Library: Media Library Folder & File Manager
 
 
 soo demo importer
