--- a/wordpress.html
+++ b/wordpress.html
@@ -82,6 +82,7 @@ Starter Templates — Elementor, WordPress & Beaver Builder Templates
 Photo Gallery by 10Web-Mobile-Friendly Image Gallery
 Best WordPress Gallery Plugin – FooGallery
 Real Media Library: Media Library Folder & File Manager
+Slider, Gallery, and Carousel by MetaSlider – Responsive WordPress Slideshows
 
 
 soo demo importer
