--- a/wordpress.html
+++ b/wordpress.html
@@ -95,6 +95,13 @@ header.php
 	}
 ?>
 
+php_value upload_max_filesize 128M
+php_value post_max_size 128M
+php_value memory_limit 256M
+php_value max_execution_time 300
+php_value max_input_time 300
+
+
 soo demo importer
 SoftTech IT 
 bKash WordPress Payment
