--- a/wordpress.html
+++ b/wordpress.html
@@ -84,6 +84,7 @@ Best WordPress Gallery Plugin – FooGallery
 Real Media Library: Media Library Folder & File Manager
 Slider, Gallery, and Carousel by MetaSlider – Responsive WordPress Slideshows
 Responsive Menu – Create Mobile-Friendly Menu
+Yoast Duplicate Post By Enrico Battocchi & Team Yoast
 
 
 Apperance->Theme File Editor->
