--- a/wordpress.html
+++ b/wordpress.html
@@ -85,6 +85,7 @@ Real Media Library: Media Library Folder & File Manager
 Slider, Gallery, and Carousel by MetaSlider – Responsive WordPress Slideshows
 Responsive Menu – Create Mobile-Friendly Menu
 Yoast Duplicate Post By Enrico Battocchi & Team Yoast
+Smart Slider 3 By Nextend
 
 
 Apperance->Theme File Editor->
