--- a/wordpress.html
+++ b/wordpress.html
@@ -86,6 +86,7 @@ Slider, Gallery, and Carousel by MetaSlider – Responsive WordPress Slideshows
 Responsive Menu – Create Mobile-Friendly Menu
 Yoast Duplicate Post By Enrico Battocchi & Team Yoast
 Smart Slider 3 By Nextend
+Widget Options – The #1 WordPress Widget & Block Control Plugin By Widget Options Team
 
 
 Apperance->Theme File Editor->
