--- a/wordpress.html
+++ b/wordpress.html
@@ -87,6 +87,7 @@ Responsive Menu – Create Mobile-Friendly Menu
 Yoast Duplicate Post By Enrico Battocchi & Team Yoast
 Smart Slider 3 By Nextend
 Widget Options – The #1 WordPress Widget & Block Control Plugin By Widget Options Team
+TablePress – Tables in WordPress made easy By Tobias Bäthge
 
 
 Apperance->Theme File Editor->
