--- a/wordpress.html
+++ b/wordpress.html
@@ -88,6 +88,7 @@ Yoast Duplicate Post By Enrico Battocchi & Team Yoast
 Smart Slider 3 By Nextend
 Widget Options – The #1 WordPress Widget & Block Control Plugin By Widget Options Team
 TablePress – Tables in WordPress made easy By Tobias Bäthge
+Click to Chat – HoliThemes By HoliThemes
 
 
 Apperance->Theme File Editor->
