--- a/wordpress.html
+++ b/wordpress.html
@@ -89,6 +89,7 @@ Smart Slider 3 By Nextend
 Widget Options – The #1 WordPress Widget & Block Control Plugin By Widget Options Team
 TablePress – Tables in WordPress made easy By Tobias Bäthge
 Click to Chat – HoliThemes By HoliThemes
+Disable Right Click For WP By Aftab Muni
 
 
 Apperance->Theme File Editor->
