--- a/wordpress.html
+++ b/wordpress.html
@@ -90,6 +90,7 @@ Widget Options – The #1 WordPress Widget & Block Control Plugin By Widget Opti
 TablePress – Tables in WordPress made easy By Tobias Bäthge
 Click to Chat – HoliThemes By HoliThemes
 Disable Right Click For WP By Aftab Muni
+Call Now Button – The #1 Click to Call Button for WordPress By NowButtons.com
 
 
 Apperance->Theme File Editor->
