--- a/wordpress.html
+++ b/wordpress.html
@@ -91,6 +91,7 @@ TablePress – Tables in WordPress made easy By Tobias Bäthge
 Click to Chat – HoliThemes By HoliThemes
 Disable Right Click For WP By Aftab Muni
 Call Now Button – The #1 Click to Call Button for WordPress By NowButtons.com
+Ultimate Member – User Profile, Registration, Login, Member Directory, Content Restriction & Membership Plugin By Ultimate Member
 
 
 Apperance->Theme File Editor->
