--- a/wordpress.html
+++ b/wordpress.html
@@ -92,6 +92,7 @@ Click to Chat – HoliThemes By HoliThemes
 Disable Right Click For WP By Aftab Muni
 Call Now Button – The #1 Click to Call Button for WordPress By NowButtons.com
 Ultimate Member – User Profile, Registration, Login, Member Directory, Content Restriction & Membership Plugin By Ultimate Member
+Easy WP SMTP by SendLayer – WordPress SMTP and Email Log Plugin By Easy WP SMTP
 
 
 Apperance->Theme File Editor->
