--- a/wordpress.html
+++ b/wordpress.html
@@ -70,7 +70,7 @@ WhiteDot
 
 plugin
 -----------------------------
-Contact Form 7
+Contact Form 7 By Takayuki Miyoshi
 Elementor Website Builder – More than Just a Page Builder
 Tutor LMS – eLearning and online course solution
 Tutor LMS Elementor Addons
