--- a/wordpress.html
+++ b/wordpress.html
@@ -74,7 +74,7 @@ Contact Form 7 By Takayuki Miyoshi
 Elementor Website Builder – More than Just a Page Builder
 Tutor LMS – eLearning and online course solution
 Tutor LMS Elementor Addons
-WooCommerce
+WooCommerce By Automattic
 WooCommerce Stripe Payment Gateway
 FluentSMTP – WP Mail SMTP, Amazon SES, SendGrid, MailGun and Any SMTP Connector Plugin
 Contact Form Plugin – Fastest Contact Form Builder Plugin for WordPress by Fluent Forms
