--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
                   <a href="./scroll_top.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">scroll_top</a>
                   <a href="./pc.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">PC Faster</a>
                   <a href="./permission_error.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Permission Error</a>
+                  <a href="./google_extensions.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Google Extensions</a>
                   <a href="./" class="btn btn-outline-success fw-bold mb-2" target="_blank"></a>
 
 
