--- a/wordpress.html
+++ b/wordpress.html
@@ -13,7 +13,8 @@
       <div class="row">
         <textarea cols="200" rows="20" class="form-control"> 
 Elementor-> Features-> Flexbox Container-> Inactive
-
+Page Edit Elementor-> Left Bottom Settings-> Page Layout-> Elementor Canvas
+Page Edit Elementor-> Left Bottom Settings-> Hide Title-> enable
 
 
 
