--- a/wordpress.html
+++ b/wordpress.html
@@ -104,6 +104,7 @@ Call Now Button – The #1 Click to Call Button for WordPress By NowButtons.com
 Ultimate Member – User Profile, Registration, Login, Member Directory, Content Restriction & Membership Plugin By Ultimate Member
 Easy WP SMTP by SendLayer – WordPress SMTP and Email Log Plugin By Easy WP SMTP
 WooCommerce Smart COD By woosmartcod.com
+All-in-One WP Migration By ServMask
 
 
 Apperance->Theme File Editor->
