--- a/wordpress.html
+++ b/wordpress.html
@@ -118,20 +118,21 @@ header.php
 
 .htaccess
 ----------------------------------
-if module
+<IfModule mod_rewrite.c>
 	php_value upload_max_filesize 128M
 	php_value post_max_size 128M
 	php_value memory_limit 256M
 	php_value max_execution_time 300
 	php_value max_input_time 300
+</IfModule>	
+or
+wp-config.php file
+@ini_set( 'upload_max_filesize' , '128M' );
+@ini_set( 'post_max_size', '128M');
+@ini_set( 'memory_limit', '256M' );
+@ini_set( 'max_execution_time', '300' );
+@ini_set( 'max_input_time', '300' );
 
-php_value upload_max_filesize 128M
-php_value post_max_size 128M
-php_value memory_limit 256M
-php_value max_execution_time 300
-php_value max_input_time 300
-
-if module
 
 soo demo importer
 SoftTech IT 
