--- a/wordpress.html
+++ b/wordpress.html
@@ -12,12 +12,21 @@
     <div class="container pt-4">
       <div class="row">
         <textarea cols="200" rows="20" class="form-control"> 
+
+procoder-> ecommerce
+----------------------------------
+theme-> Astra-> Fashion Designer
+plugin-> Starter Templates, Elementor, Elementor Header & Footer Builder, WooCommerce, 
+
+
 Elementor-> Features-> Flexbox Container-> Inactive
 Page Edit Elementor-> Left Bottom Settings-> Page Layout-> Elementor Canvas
 Page Edit Elementor-> Left Bottom Settings-> Hide Title-> enable
 
 
-
+Popular Font Name
+-----------------
+oswald, montsr, poppin, philos
 
                                                      
 CMS
