--- a/wordpress.html
+++ b/wordpress.html
@@ -31,11 +31,10 @@ oswald, montsr, poppin, philos
                                                      
 CMS
 moshiur - codersfoundation.com
-wordpress.org [own] / wordpress.com [free but limitation]
+wordpress.org(download) [own] / wordpress.com [free but limitation]
 domain - name
 hosting - rakhar sthan
-download wordpress latest version
-Wordpress Theme Customiztion / Wordpress Plugin Cusyomization
+Wordpress Theme Customization / Wordpress Theme Development / Wordpress Plugin Development
 
 localhost/wordpress/wp_ecommerce/
 localhost/wordpress/wp_ecommerce/wp-admin
@@ -86,7 +85,7 @@ zita for blog
 WhiteDot
 Storefront
 
-plugin
+plugins
 -----------------------------
 Contact Form 7 By Takayuki Miyoshi
 Elementor Website Builder – More than Just a Page Builder
