--- a/wordpress.html
+++ b/wordpress.html
@@ -18,6 +18,10 @@ procoder-> ecommerce
 theme-> Astra-> Fashion Designer
 plugin-> Starter Templates, Elementor, Elementor Header & Footer Builder, WooCommerce, 
 
+procoder-> woocommerce
+----------------------------------
+theme->
+plugin-> WooCommerce
 
 Elementor-> Features-> Flexbox Container-> Inactive
 Page Edit Elementor-> Left Bottom Settings-> Page Layout-> Elementor Canvas
