--- a/wordpress.html
+++ b/wordpress.html
@@ -13,6 +13,20 @@
       <div class="row">
         <textarea cols="200" rows="20" class="form-control"> 
 
+Speed Optimization
+----------------------------------
+https://pagespeed.web.dev/
+https://www.sanaul.info/wp-rocket-plugin/#more-646
+https://shop.workupplace.com/product/wp-rocket-license/
+https://drive.google.com/file/d/1eMPluqPE4I_fbaCJXZjK9yl66NiqmVfC/view
+
+wp rocket
+tools-> import settings [.json]
+WP Rocket-> Clear and preload cache
+
+omgf by Daan form Daan.dev
+Manage cache-> Empty Cache Directory and Refress ...  [Save]
+
 procoder-> ecommerce
 ----------------------------------
 theme-> Astra-> Fashion Designer
