--- a/wordpress.html
+++ b/wordpress.html
@@ -15,9 +15,10 @@
 
 Speed Optimization
 ----------------------------------
+Process 1
 https://pagespeed.web.dev/
 https://www.sanaul.info/wp-rocket-plugin/#more-646
-https://shop.workupplace.com/product/wp-rocket-license/
+https://shop.workupplace.com/product/wp-rocket-license/ [PAID]
 https://drive.google.com/file/d/1eMPluqPE4I_fbaCJXZjK9yl66NiqmVfC/view
 
 wp rocket
@@ -26,6 +27,21 @@ WP Rocket-> Clear and preload cache
 
 omgf by Daan form Daan.dev
 Manage cache-> Empty Cache Directory and Refress ...  [Save]
+
+Process 2
+https://www.youtube.com/watch?v=kJDidbViYD0
+Cloudflare configuration-> https://www.cloudflare.com/lp/ppc/overview-x/?utm_source=google&utm_medium=cpc&utm_campaign=ao-fy-acq-apac_en_in-umbrella-br-ge-prospecting-sch_g_brand_alpha_na_pure&utm_content=Alpha_Brand_Pure_Cloudflare&utm_term=cloudflare&campaignid=71700000116261124&adgroupid=58700008620157783&creativeid=682737031106&gad_source=1&gclid=CjwKCAiA_5WvBhBAEiwAZtCU7xe3xDFnFhl4X5lLPRVVXGV6wuw2x54t3Vflvxyk54ZdUFImH2f2HRoCI9gQAvD_BwE&gclsrc=aw.ds
+Resmush.it image optimizer By reSmush.it -> image quality-> 90
+Jetpack by WordPress.com By Automattic-> Create Account or Login-> Start with Free
+W3 total cache By Frederick Townes
+
+Process 3
+10Web Booster - Website speed optimization & Page Speed optimizer By 10Web - Website speed optimization team
+
+
+
+
+
 
 procoder-> ecommerce
 ----------------------------------
