--- a/wordpress.html
+++ b/wordpress.html
@@ -36,11 +36,14 @@ Jetpack by WordPress.com By Automattic-> Create Account or Login-> Start with Fr
 W3 total cache By Frederick Townes
 
 Process 3
+https://www.youtube.com/watch?v=14JmynKVRHQ
 10Web Booster - Website speed optimization & Page Speed optimizer By 10Web - Website speed optimization team
 
+Process 3
+https://www.youtube.com/watch?v=SYizF37NgME
 
-
-
+Process 4
+https://www.youtube.com/watch?v=lZsky3uPYFQ
 
 
 procoder-> ecommerce
