--- a/wordpress.html
+++ b/wordpress.html
@@ -12,6 +12,11 @@
     <div class="container pt-4">
       <div class="row">
         <textarea cols="200" rows="20" class="form-control"> 
+shamim_blog
+----------------------------------
+theme-> hello elementor
+plugin-> classic editor, duplicate page, elementor, elementor pro
+
 
 Speed Optimization
 ----------------------------------
