--- a/wordpress.html
+++ b/wordpress.html
@@ -164,6 +164,7 @@ Ultimate Member – User Profile, Registration, Login, Member Directory, Content
 Easy WP SMTP by SendLayer – WordPress SMTP and Email Log Plugin By Easy WP SMTP
 WooCommerce Smart COD By woosmartcod.com
 All-in-One WP Migration By ServMask
+WooCommerce Checkout & Funnel Builder by CartFlows – Create High Converting Stores For WooCommerce By CartFlows Inc
 
 
 Apperance->Theme File Editor->
