--- a/wordpress.html
+++ b/wordpress.html
@@ -167,6 +167,10 @@ All-in-One WP Migration By ServMask
 WooCommerce Checkout & Funnel Builder by CartFlows – Create High Converting Stores For WooCommerce By CartFlows Inc
 
 
+addons
+----------------------------------------------
+OoohBoi Steroids for Elementor By OoohBoi
+
 Apperance->Theme File Editor->
 header.php
 -------------------
