--- a/wordpress.html
+++ b/wordpress.html
@@ -17,6 +17,18 @@ shamim_blog
 theme-> hello elementor
 plugin-> classic editor, duplicate page, elementor, elementor pro
 
+bellow tow background image above text contents
+----------------------------------------------------------------
+create a new page
+add plugin elementor
+add plugin OoohBoi Steroids for Elementor
+add new section with 2 column
+select left column ->  layout -> breaking-bad -> width 100%
+select right column ->  layout -> breaking-bad -> width 100%
+add content in top column
+select top column -> advanced -> pseudo -> enable -> before set image -> position & size -> w:50% h:100% position set
+select bottom column -> advanced -> pseudo -> enable -> before set image -> position & size -> w:50% h:100% offset left 50% z-index -1 position set 
+image black and white -> CSS Filters -> saturation -> 0
 
 Speed Optimization
 ----------------------------------
