--- a/wordpress.html
+++ b/wordpress.html
@@ -12,6 +12,22 @@
     <div class="container pt-4">
       <div class="row">
         <textarea cols="200" rows="20" class="form-control"> 
+Simple Landing Page 
+------------------------------------------------
+add theme -> Hello Elementor
+add plugin -> elementor, woocommerce, cartflows
+
+Products -> Add New -> Title & Price (Single)
+CartFlows -> Funnels -> Pet Food -> Name -> Import -> 
+CartFlows -> Funnels -> Name -> Chekout -> Settings icon -> Select Product & Add -> Save Setting 
+CartFlows -> Funnels -> Name -> Chekout -> edit with elementor -> Desgin -> After Design -> Widget -> Checkout Form 
+CartFlows -> Funnels -> Name -> Chekout -> Settings icon -> Checkout Form -> Field Editor -> Enable -> Check needed or edit
+Woocommerce -> Settings -> Payments -> Cash on delivery -> Enable
+
+Elementor [ Container To Section ]
+----------------------------------------------------
+Elementor -> Settings -> Features -> Flexbox Container -> Inactive
+
 shamim_blog
 ----------------------------------
 theme-> hello elementor
