--- a/wordpress.html
+++ b/wordpress.html
@@ -12,6 +12,12 @@
     <div class="container pt-4">
       <div class="row">
         <textarea cols="200" rows="20" class="form-control"> 
+
+Build Custom Header
+-------------------------------------------
+Templates -> Theme Builder -> Header -> Add New -> 
+
+
 Simple Landing Page 
 ------------------------------------------------
 add theme -> Hello Elementor
