--- a/wordpress.html
+++ b/wordpress.html
@@ -164,7 +164,9 @@ windows+; for emoji
 
 themes
 -----------------------------
-astra for lms
+OceanWP
+Bosa Digital Agency
+Astra for lms
 martfury for ecommerce
 zita for blog
 WhiteDot
