--- a/wordpress.html
+++ b/wordpress.html
@@ -171,6 +171,7 @@ martfury for ecommerce
 zita for blog
 WhiteDot
 Storefront
+Bosa Real Estate
 
 plugins
 -----------------------------
@@ -201,6 +202,7 @@ Easy WP SMTP by SendLayer – WordPress SMTP and Email Log Plugin By Easy WP SMT
 WooCommerce Smart COD By woosmartcod.com
 All-in-One WP Migration By ServMask
 WooCommerce Checkout & Funnel Builder by CartFlows – Create High Converting Stores For WooCommerce By CartFlows Inc
+GTranslate By Translate AI Multilingual Solutions 
 
 
 addons
