--- a/export_vcf.html
+++ b/export_vcf.html
@@ -18,6 +18,7 @@ Route::get('/save/vcf',  [WelcomeController::class, 'vcf']);
 
 my mobile working
 -------------------------------------------
+use App\Models\User;
 use JeroenDesloovere\VCard\VCard;
 use JeroenDesloovere\VCard\Property\Name;
 use JeroenDesloovere\VCard\Formatter\VcfFormatter;
