--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                   <a href="./pc.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">PC Faster</a>
                   <a href="./permission_error.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Permission Error</a>
                   <a href="./google_extensions.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Google Extensions</a>
+                  <a href="./responsive.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Responsive</a>
                   <a href="./" class="btn btn-outline-success fw-bold mb-2" target="_blank"></a>
 
 
