--- a/email_verification.html
+++ b/email_verification.html
@@ -17,6 +17,12 @@ Email Verification At - MAILTRAP
 -----------------------------------------------------------------------
 https://mailtrap.io/
 My Inbox -> cURL -> Laravel Latest Version [copy] [paste->.env]
+[arman.p2c@gmail.com]
+MAIL_MAILER=smtp
+MAIL_HOST=sandbox.smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=f463e54c86cd6c
+MAIL_PASSWORD=b21b2da77a148f
           
 User.php
 use Illuminate\Contracts\Auth\MustVerifyEmail;
