--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
                   <a href="./google_extensions.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Google Extensions</a>
                   <a href="./responsive.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Responsive</a>
                   <a href="./404.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">404</a>
+                  <a href="./multi_step_form.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">multi_step_form</a>
                   <a href="./" class="btn btn-outline-success fw-bold mb-2" target="_blank"></a>
 
 
