--- a/multi_step_form.html
+++ b/multi_step_form.html
@@ -12,7 +12,7 @@
     <div class="container pt-4">
       <div class="row">
         <textarea cols="200" rows="20" class="form-control">                                                      
-
+ROUTE
 use App\Http\Controllers\ProfileController;
 Route::get('/', [ProfileController::class, 'index']);
 Route::get('/create-profile-one', [ProfileController::class, 'create1']);
@@ -21,14 +21,12 @@ Route::get('/create-profile-two', [ProfileController::class, 'create2']);
 Route::post('/store-profile-two', [ProfileController::class, 'store2']);
 Route::get('/create-profile-three', [ProfileController::class, 'create3']);
 Route::post('/store-profile-three', [ProfileController::class, 'store3']);
-
+          
+CONTROLLER
 <?php
-
 namespace App\Http\Controllers;
-
 use Illuminate\Http\Request;
 use App\Models\Profile;
-
 class ProfileController extends Controller
 {
     public function index(){
@@ -85,40 +83,41 @@ class ProfileController extends Controller
     }
 }
 
+FORM1
+<form action="{{url('/store-profile-one')}}" method="post" class="card p-3"> @csrf
+  <div class="col-12">
+  <input type="text" name="name" value="{{ $profile->name ?? '' }}" placeholder="Enter name" class="form-control @error('name') is-invalid @enderror">
+  @error('name') <span class="text-danger">{{$message}}</span> @enderror
+  </div>
+  <div class="col-12 justify-content-between d-flex pt-3">
+  <a href="{{url('/')}}" class="btn btn-secondary"><-Cancel</a>
+  <button type="submit" class="btn btn-primary">Next-></button>
+  </div>
+</form>
 
-              <form action="{{url('/store-profile-one')}}" method="post" class="card p-3"> @csrf
-                <div class="col-12">
-                <input type="text" name="name" value="{{ $profile->name ?? '' }}" placeholder="Enter name" class="form-control @error('name') is-invalid @enderror">
-                @error('name') <span class="text-danger">{{$message}}</span> @enderror
-                </div>
-                <div class="col-12 justify-content-between d-flex pt-3">
-                <a href="{{url('/')}}" class="btn btn-secondary"><-Cancel</a>
-                <button type="submit" class="btn btn-primary">Next-></button>
-                </div>
-              </form>
-
-              <form action="{{url('/store-profile-two')}}" method="post" class="card p-3"> @csrf
-                <div class="col-12">
-                <input type="text" name="email" value="{{ $profile->email ?? '' }}" placeholder="Enter email" class="form-control @error('email') is-invalid @enderror">
-                @error('email') <span class="text-danger">{{$message}}</span> @enderror
-                </div>
-                <div class="col-12 justify-content-between d-flex pt-3">
-                <a href="{{url('/create-profile-one')}}" class="btn btn-secondary"><-Back</a>
-                <button type="submit" class="btn btn-primary">Next -></button>
-                </div>
-              </form>
-
-              <form action="{{url('/store-profile-three')}}" method="post" class="card p-3"> @csrf
-                <div class="col-12 text-center">
-                  <p>{{$profile->name}}</p>
-                  <p>{{$profile->email}}</p>
-                </div>
-                <div class="col-12 justify-content-between d-flex pt-3">
-                <a href="{{url('/create-profile-two')}}" class="btn btn-secondary"><-Back</a>
-                <button type="submit" class="btn btn-primary">Submit</button>
-                </div>
-              </form>
-
+FORM2
+<form action="{{url('/store-profile-two')}}" method="post" class="card p-3"> @csrf
+  <div class="col-12">
+  <input type="text" name="email" value="{{ $profile->email ?? '' }}" placeholder="Enter email" class="form-control @error('email') is-invalid @enderror">
+  @error('email') <span class="text-danger">{{$message}}</span> @enderror
+  </div>
+  <div class="col-12 justify-content-between d-flex pt-3">
+  <a href="{{url('/create-profile-one')}}" class="btn btn-secondary"><-Back</a>
+  <button type="submit" class="btn btn-primary">Next -></button>
+  </div>
+</form>
+          
+FORM3
+<form action="{{url('/store-profile-three')}}" method="post" class="card p-3"> @csrf
+  <div class="col-12 text-center">
+    <p>{{$profile->name}}</p>
+    <p>{{$profile->email}}</p>
+  </div>
+  <div class="col-12 justify-content-between d-flex pt-3">
+  <a href="{{url('/create-profile-two')}}" class="btn btn-secondary"><-Back</a>
+  <button type="submit" class="btn btn-primary">Submit</button>
+  </div>
+</form>
 
         </textarea>
       </div>
