--- a/domain_hosting.html
+++ b/domain_hosting.html
@@ -26,7 +26,7 @@ public function boot()
 { Schema::defaultStringLength(191); }
           
 Problem : 
-Solution :
+Solution : Nameservers - ns1.a2hosting.com / ns2.a2hosting.com
           
 Problem : 
 Solution :
