--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
                   <a href="./responsive.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Responsive</a>
                   <a href="./404.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">404</a>
                   <a href="./multi_step_form.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">multi_step_form</a>
+                  <a href="./button.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Buttons</a>
                   <a href="./" class="btn btn-outline-success fw-bold mb-2" target="_blank"></a>
 
 
