--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
                   <a href="./multi_step_form.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">multi_step_form</a>
                   <a href="./button.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Buttons</a>
                   <a href="./light_dark.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Light Dark</a>
+                  <a href="./seo.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">SEO</a>
                   <a href="./" class="btn btn-outline-success fw-bold mb-2" target="_blank"></a>
 
 
