--- a/validation.html
+++ b/validation.html
@@ -16,6 +16,7 @@ Frontend Validation
 ----------------------
 <input type="text" pattern=".{11,11}" title="Please Insert Valid Mobile Number" required>
 <input type="tel" pattern="\d{11}" required>
+<input type="number" min="10000000000" max="99999999999" oninput="this.value = this.value.slice(0, 11)" required>
           
 use Illuminate\Support\Facades\Validator;
 
