--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                   <a href="./livewire.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Livewire</a>
                   <a href="./wordpress.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">WordPress</a>
                   <a href="./authentication.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Authentication</a>
+                  <a href="./breezeSocialiteGoogle.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">BreezeSocialiteGoogle</a>
                   <a href="./email_verification.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Email Verification</a>
                   <a href="./command.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Command</a>
                   <a href="./mysql.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">My SQL</a>
