--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
                   <a href="./button.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Buttons</a>
                   <a href="./light_dark.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Light Dark</a>
                   <a href="./seo.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">SEO</a>
+                  <a href="./crop_image.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Crop Image </a>
                   <a href="./" class="btn btn-outline-success fw-bold mb-2" target="_blank"></a>
 
 
